# NYCU_114Autumn_AIMI

./: .gitignore
Lab1/: .gitignore  README.md  pyproject.toml
Lab1/code/: dataloader.py  inference.py  models.py  train.py  utils.py
Lab2/: .gitignore  README.md  dataloader.py  main.py  pyproject.toml  run_experiments.sh  summarize_results.py  summary.csv
Lab2/DeepConvNet_optAdam_bs64_lr0.0003_dp0.5_ep200_wd1e-4/: config.txt
Lab2/EEGNet_optAdamW_bs32_lr0.0007_dp0.25_ep200_wd1e-4/: config.txt
Lab2/models/: DeepConvNet.py  EEGNet.py
lab1/: README.md  dataloader.py  inference.py  models.py  pyproject.toml  sample.py  train.py  utils.py
lab2/: dataloader.py  main.py
lab2/models/: EEGNet.py
