[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
