[project]
name = "lab1-pneumonia"
version = "0.1.0"
description = "Pneumonia classification on chest X-ray images (Lab1)"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "numpy>=1.24.4",
    "tqdm>=4.67.1",
]
